# sound-visualizer

./: pyproject.toml  pyrightconfig.json
shaders/: fragment.glsl  vertex.glsl
shaders/light/: fragment.glsl  vertex.glsl
shaders/object/: fragment.glsl  vertex.glsl
src/sound_visualizer/: main.py  shader.py
src/sound_visualizer/objects/: debug_camera.py  light_object.py  mesh_object.py  mesh_object3d.py
src/sound_visualizer/resources/: mesh.py  shader.py  texture.py
src/sound_visualizer/systems/: render_context.py  time.py
